--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -20,7 +20,7 @@
         <a href="index.html" class="nav-link"><i class="fas fa-home"></i> الرئيسية</a>
         <div class="user-info">
           <span class="user-name" id="userName">جاري التحميل...</span>
-          <button class="btn btn-outline btn-sm" onclick="window.Auth.logout()">
+          <button class="btn btn-outline btn-sm" onclick="AuthManager.logout()">
             <i class="fas fa-sign-out-alt"></i> خروج
           </button>
         </div>
@@ -86,7 +86,7 @@
         <div class="card-content recent-reviews"></div>
       </div>
 
-      <!-- Analytics placeholder -->
+      <!-- Analytics -->
       <div class="dashboard-card analytics-card">
         <div class="card-header">
           <h3><i class="fas fa-chart-bar"></i> تحليلات الأداء</h3>
@@ -131,6 +131,7 @@
     </div>
   </div>
 
+  <!-- Scripts -->
   <script src="js/api.js"></script>
   <script src="js/ui.js"></script>
   <script src="js/auth.js"></script>
