Fix init project and check if auth

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -18,12 +18,12 @@
       </div>
       <div class="nav-links">
         <a href="index.html" class="nav-link"><i class="fas fa-home"></i> الرئيسية</a>
-        <div class="user-info">
-          <span class="user-name" id="userName">جاري التحميل...</span>
-          <button class="btn btn-outline btn-sm" onclick="AuthManager.logout()">
-            <i class="fas fa-sign-out-alt"></i> خروج
-          </button>
-        </div>
+      <div class="user-info" id="userInfo" style="display: none;">
+        <span class="user-name" id="userName">جاري التحميل...</span>
+        <button class="btn btn-outline btn-sm" onclick="AuthManager.logout()">
+          <i class="fas fa-sign-out-alt"></i> خروج
+        </button>
+      </div>
       </div>
     </nav>
 
