--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -165,5 +165,8 @@
   <script src="js/dashboard.js"></script>
   <script src="js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <!-- Markdown Libraries -->
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/dompurify/dist/purify.min.js"></script>
 </body>
 </html>
