--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -18,12 +18,12 @@
       </div>
       <div class="nav-links">
         <a href="index.html" class="nav-link"><i class="fas fa-home"></i> الرئيسية</a>
+      </div>
       <div class="user-info" id="userInfo" style="display: none;">
         <span class="user-name" id="userName">جاري التحميل...</span>
         <button class="btn btn-outline btn-sm" onclick="AuthManager.logout()">
           <i class="fas fa-sign-out-alt"></i> خروج
         </button>
-      </div>
       </div>
     </nav>
 
@@ -88,12 +88,19 @@
             </select>
             <select id="reviewFilter" class="filter-select">
               <option value="">جميع الأنواع</option>
-              <option value="إيجابي">إيجابي</option>
-              <option value="نقد">نقد بناء</option>
-              <option value="شكوى">شكاوى</option>
+              <option value="شكوى">شكوى</option>
+              <option value="اقتراح">اقتراح</option>
+              <option value="مدح">مدح</option>
+              <option value="استفسار">استفسار</option>
+              <option value="عام">عام</option>
+            </select>
+             <select id="starsFilter" class="filter-select">
+              <option value="">كل التقييمات</option>
+              <option value="high">مرتفع (4-5 نجوم)</option>
+              <option value="low">منخفض (1-3 نجوم)</option>
             </select>
             <select id="mismatchFilter" class="filter-select">
-              <option value="">جميع التقييمات</option>
+              <option value="">الكل</option>
               <option value="valid">المتطابقة فقط ✅</option>
               <option value="mismatch">غير المتطابقة ⚠️</option>
             </select>
